// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SignUpScreens Create Account Personal 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
      "paddingTop": 0,
    }
  }
>
  <RCTSafeAreaView
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
          "height": 1334,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "flex-end",
            "margin": 16,
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#4f6a92",
                "fontSize": 20,
                "fontWeight": "bold",
                "lineHeight": 32,
                "marginBottom": 14,
                "marginTop": 17,
                "textAlign": "center",
              }
            }
          >
            See all your diabetes data in one place.
          </Text>
        </View>
        <View
          style={Object {}}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderBottomWidth": 1,
                "borderColor": "#D9D5DC",
                "borderLeftWidth": 0,
                "borderRadius": undefined,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "borderWidth": undefined,
                "flexDirection": "row",
                "marginLeft": 15,
                "opacity": 1,
              }
            }
          >
            <TextInput
              editable={true}
              placeholder="Full Name"
              placeholderTextColor="#575757"
              style={
                Object {
                  "color": "#000",
                  "flex": 1,
                  "fontSize": 17,
                  "height": 50,
                  "paddingLeft": 5,
                  "paddingRight": 5,
                  "top": 1.5,
                }
              }
              underlineColorAndroid="rgba(0,0,0,0)"
            />
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderBottomWidth": 1,
                "borderColor": "#D9D5DC",
                "borderLeftWidth": 0,
                "borderRadius": undefined,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "borderWidth": undefined,
                "flexDirection": "row",
                "marginLeft": 15,
                "opacity": 1,
              }
            }
          >
            <TextInput
              editable={true}
              placeholder="Email"
              placeholderTextColor="#575757"
              style={
                Object {
                  "color": "#000",
                  "flex": 1,
                  "fontSize": 17,
                  "height": 50,
                  "paddingLeft": 5,
                  "paddingRight": 5,
                  "top": 1.5,
                }
              }
              underlineColorAndroid="rgba(0,0,0,0)"
            />
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderBottomWidth": 1,
                "borderColor": "#D9D5DC",
                "borderLeftWidth": 0,
                "borderRadius": undefined,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "borderWidth": undefined,
                "flexDirection": "row",
                "marginLeft": 15,
                "opacity": 1,
              }
            }
          >
            <TextInput
              editable={true}
              placeholder="Password"
              placeholderTextColor="#575757"
              style={
                Object {
                  "color": "#000",
                  "flex": 1,
                  "fontSize": 17,
                  "height": 50,
                  "paddingLeft": 5,
                  "paddingRight": 5,
                  "top": 1.5,
                }
              }
              underlineColorAndroid="rgba(0,0,0,0)"
            />
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderBottomWidth": 1,
                "borderColor": "#D9D5DC",
                "borderLeftWidth": 0,
                "borderRadius": undefined,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "borderWidth": undefined,
                "flexDirection": "row",
                "marginLeft": 15,
                "opacity": 1,
              }
            }
          >
            <TextInput
              editable={true}
              placeholder="Confirm Password"
              placeholderTextColor="#575757"
              style={
                Object {
                  "color": "#000",
                  "flex": 1,
                  "fontSize": 17,
                  "height": 50,
                  "paddingLeft": 5,
                  "paddingRight": 5,
                  "top": 1.5,
                }
              }
              underlineColorAndroid="rgba(0,0,0,0)"
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "flex-end",
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#627cff",
                "borderBottomWidth": null,
                "borderColor": "#627cff",
                "borderLeftWidth": null,
                "borderRadius": 5,
                "borderRightWidth": null,
                "borderTopWidth": null,
                "borderWidth": undefined,
                "elevation": 2,
                "flexDirection": "row",
                "height": 45,
                "justifyContent": "center",
                "opacity": 1,
                "paddingBottom": 6,
                "paddingTop": 6,
                "shadowColor": undefined,
                "shadowOffset": undefined,
                "shadowOpacity": undefined,
                "shadowRadius": undefined,
              }
            }
          >
            <Text
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#fff",
                  "fontFamily": "System",
                  "fontSize": 16.5,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                }
              }
              uppercase={false}
            >
              Continue
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</RCTSafeAreaView>
`;

exports[`Storyshots SignUpScreens Diabetes Details 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
      "paddingTop": 0,
    }
  }
>
  <RCTSafeAreaView
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
          "height": 1334,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "margin": 16,
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#4f6a92",
                "fontSize": 20,
                "fontWeight": "bold",
                "lineHeight": 32,
                "marginBottom": 14,
                "marginTop": 17,
                "textAlign": "center",
              }
            }
          >
            Whose diabetes data will you be managing?
          </Text>
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#f9f9f9",
                  "borderColor": "#ededed",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "elevation": 4,
                  "marginVertical": 8,
                  "minHeight": 43,
                  "overflow": "hidden",
                },
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              disabled={false}
              style={
                Array [
                  Array [
                    undefined,
                    null,
                  ],
                  Object {
                    "color": "#4f6a92",
                    "flexWrap": "wrap",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "marginBottom": 11,
                    "marginLeft": 16,
                    "marginRight": 52,
                    "marginTop": 11,
                  },
                ]
              }
            >
              This is for me, I have diabetes
            </Text>
          </View>
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#f9f9f9",
                  "borderColor": "#ededed",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "elevation": 4,
                  "marginVertical": 8,
                  "minHeight": 43,
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#DCE0F9",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              disabled={false}
              style={
                Array [
                  Array [
                    undefined,
                    null,
                  ],
                  Object {
                    "color": "#4f6a92",
                    "flexWrap": "wrap",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "marginBottom": 11,
                    "marginLeft": 16,
                    "marginRight": 52,
                    "marginTop": 11,
                  },
                ]
              }
            >
              This is for someone I care for who has diabetes
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              Object {
                "paddingBottom": 32,
                "paddingTop": 32,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "white",
                  "flex": 1,
                  "height": 1,
                },
                Object {
                  "backgroundColor": "#ececed",
                  "height": 1,
                },
              ]
            }
          />
          <Text
            style={
              Array [
                undefined,
                Object {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                },
                undefined,
              ]
            }
          >
            
          </Text>
          <View
            style={
              Array [
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "white",
                  "flex": 1,
                  "height": 1,
                },
                Object {
                  "backgroundColor": "#ececed",
                  "height": 1,
                },
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {},
              Object {
                "flex": 1,
                "margin": 16,
              },
            ]
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderBottomWidth": 1,
                "borderColor": "#D9D5DC",
                "borderLeftWidth": 0,
                "borderRadius": undefined,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "borderWidth": undefined,
                "flexDirection": "row",
                "marginLeft": 0,
                "opacity": 1,
              }
            }
          >
            <View>
              <View
                accessible={true}
                isTVSelectable={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": null,
                    "borderBottomWidth": null,
                    "borderColor": "#627cff",
                    "borderLeftWidth": null,
                    "borderRadius": 5,
                    "borderRightWidth": null,
                    "borderTopWidth": null,
                    "borderWidth": undefined,
                    "elevation": 0,
                    "flexDirection": "row",
                    "height": 45,
                    "justifyContent": "space-between",
                    "opacity": 1,
                    "paddingBottom": 6,
                    "paddingTop": 6,
                    "shadowColor": null,
                    "shadowOffset": null,
                    "shadowOpacity": null,
                    "shadowRadius": null,
                  }
                }
              >
                <Text
                  ellipsizeMode="tail"
                  note={true}
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#a7a7a7",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "lineHeight": null,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                      },
                      undefined,
                      Object {
                        "color": "#bfc6ea",
                      },
                      Object {
                        "width": 700,
                      },
                    ]
                  }
                  uppercase={false}
                >
                  I have / They have...
                </Text>
              </View>
              <Modal
                animationType="slide"
                hardwareAccelerated={false}
                onRequestClose={[Function]}
                supportedOrientations={
                  Array [
                    "portrait",
                    "landscape",
                  ]
                }
                transparent={false}
                visible={false}
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#fff",
                      "flex": 1,
                      "height": 1334,
                    }
                  }
                >
                  <View
                    onLayout={[Function]}
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "#F8F8F8",
                          "borderBottomColor": "#a7a6ab",
                          "borderBottomWidth": 0.5,
                          "elevation": 3,
                          "flexDirection": "row",
                          "height": 64,
                          "justifyContent": "center",
                          "left": 0,
                          "paddingLeft": 6,
                          "paddingRight": 10,
                          "paddingTop": 18,
                          "right": 0,
                          "shadowColor": undefined,
                          "shadowOffset": undefined,
                          "shadowOpacity": undefined,
                          "shadowRadius": undefined,
                          "top": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "flex-start",
                            "alignSelf": "center",
                            "flex": 1,
                          }
                        }
                      >
                        <View
                          accessible={true}
                          isTVSelectable={true}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "alignItems": "center",
                              "alignSelf": null,
                              "backgroundColor": "transparent",
                              "borderBottomWidth": null,
                              "borderColor": null,
                              "borderLeftWidth": null,
                              "borderRadius": 5,
                              "borderRightWidth": null,
                              "borderTopWidth": null,
                              "borderWidth": undefined,
                              "elevation": 0,
                              "flexDirection": "row",
                              "height": 45,
                              "justifyContent": "space-between",
                              "marginLeft": 3,
                              "opacity": 1,
                              "paddingBottom": 6,
                              "paddingLeft": 4,
                              "paddingRight": 6,
                              "paddingTop": 6,
                              "shadowColor": null,
                              "shadowOffset": null,
                              "shadowOpacity": null,
                              "shadowRadius": null,
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "backgroundColor": "transparent",
                                "color": "#007aff",
                                "fontFamily": "System",
                                "fontSize": 17,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "paddingLeft": 2,
                                "paddingRight": undefined,
                                "top": 1,
                              }
                            }
                            uppercase={false}
                          >
                            Back
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "alignSelf": "center",
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          numberOfLines={1}
                          style={
                            Object {
                              "color": "#000",
                              "fontFamily": "System",
                              "fontSize": 17,
                              "fontWeight": "700",
                              "marginLeft": undefined,
                              "paddingLeft": 4,
                              "paddingTop": 1,
                              "textAlign": "center",
                            }
                          }
                        >
                          Select One
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "alignItems": "flex-end",
                            "alignSelf": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "flex-end",
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </Modal>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "flex-end",
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#627cff",
                "borderBottomWidth": null,
                "borderColor": "#627cff",
                "borderLeftWidth": null,
                "borderRadius": 5,
                "borderRightWidth": null,
                "borderTopWidth": null,
                "borderWidth": undefined,
                "elevation": 2,
                "flexDirection": "row",
                "height": 45,
                "justifyContent": "center",
                "opacity": 1,
                "paddingBottom": 6,
                "paddingTop": 6,
                "shadowColor": undefined,
                "shadowOffset": undefined,
                "shadowOpacity": undefined,
                "shadowRadius": undefined,
              }
            }
          >
            <Text
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#fff",
                  "fontFamily": "System",
                  "fontSize": 16.5,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                }
              }
              uppercase={false}
            >
              Continue
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</RCTSafeAreaView>
`;

exports[`Storyshots SignUpScreens Sign Up 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
      "paddingTop": 0,
    }
  }
>
  <RCTSafeAreaView
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
          "height": 1334,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "margin": 16,
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#4f6a92",
                "fontSize": 20,
                "fontWeight": "bold",
                "lineHeight": 32,
                "marginBottom": 14,
                "marginTop": 17,
                "textAlign": "center",
              }
            }
          >
            What kind of account do you need?
          </Text>
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#f9f9f9",
                  "borderColor": "#ededed",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "elevation": 4,
                  "height": 144,
                  "marginVertical": 8,
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#DCE0F9",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              disabled={false}
              style={
                Array [
                  Array [
                    undefined,
                    null,
                  ],
                  Object {
                    "color": "#4f6a92",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "lineHeight": 28,
                    "marginLeft": 16,
                    "marginTop": 8,
                  },
                ]
              }
            >
              Personal Account
            </Text>
            <Text
              style={
                Object {
                  "color": "#7e98c3",
                  "fontSize": 12,
                  "fontWeight": "500",
                  "lineHeight": 20,
                  "marginHorizontal": 16,
                  "marginVertical": 8,
                }
              }
            >
              You want to manage your diabetes data. You are caring for or supporting someone with diabetes.
            </Text>
          </View>
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#f9f9f9",
                  "borderColor": "#ededed",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "elevation": 4,
                  "height": 144,
                  "marginVertical": 8,
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#DCE0F9",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              disabled={false}
              style={
                Array [
                  Array [
                    undefined,
                    null,
                  ],
                  Object {
                    "color": "#4f6a92",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "lineHeight": 28,
                    "marginLeft": 16,
                    "marginTop": 8,
                  },
                ]
              }
            >
              Clinic Account
            </Text>
            <Text
              style={
                Object {
                  "color": "#7e98c3",
                  "fontSize": 12,
                  "fontWeight": "500",
                  "lineHeight": 20,
                  "marginHorizontal": 16,
                  "marginVertical": 8,
                }
              }
            >
              You are a doctor, a clinic or other healthcare provider that wants to use Tidepool to help people in your care.
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</RCTSafeAreaView>
`;

exports[`Storyshots SignUpScreens Terms of Use 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
      "paddingTop": 0,
    }
  }
>
  <RCTSafeAreaView
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
          "height": 1334,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "margin": 16,
          }
        }
      >
        <View>
          <View>
            <Text
              style={
                Object {
                  "color": "#4f6a92",
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "lineHeight": 32,
                  "marginBottom": 14,
                  "marginTop": 17,
                  "textAlign": "center",
                }
              }
            >
              Select your age.
            </Text>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderBottomWidth": 0.5,
                  "borderColor": "#c9c9c9",
                  "flexDirection": "row",
                  "marginLeft": 16,
                  "paddingBottom": 13,
                  "paddingRight": 16,
                  "paddingTop": 13,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#000",
                      "fontFamily": "System",
                      "fontSize": 16,
                    }
                  }
                  uppercase={false}
                >
                  I am 18 years or older
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-end",
                    "alignSelf": "center",
                    "flex": 0.28,
                    "paddingBottom": null,
                    "paddingLeft": null,
                    "paddingRight": null,
                    "paddingTop": null,
                  }
                }
              >
                <View
                  accessible={true}
                  isTVSelectable={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignSelf": null,
                      "opacity": 1,
                    }
                  }
                />
              </View>
            </View>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderBottomWidth": 0.5,
                  "borderColor": "#c9c9c9",
                  "flexDirection": "row",
                  "marginLeft": 16,
                  "paddingBottom": 13,
                  "paddingRight": 16,
                  "paddingTop": 13,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#000",
                      "fontFamily": "System",
                      "fontSize": 16,
                    }
                  }
                  uppercase={false}
                >
                  I am between 13 and 17 years old
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-end",
                    "alignSelf": "center",
                    "flex": 0.28,
                    "paddingBottom": null,
                    "paddingLeft": null,
                    "paddingRight": null,
                    "paddingTop": null,
                  }
                }
              >
                <View
                  accessible={true}
                  isTVSelectable={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignSelf": null,
                      "opacity": 1,
                    }
                  }
                />
              </View>
            </View>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderBottomWidth": 0.5,
                  "borderColor": "#c9c9c9",
                  "flexDirection": "row",
                  "marginLeft": 16,
                  "paddingBottom": 13,
                  "paddingRight": 16,
                  "paddingTop": 13,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#000",
                      "fontFamily": "System",
                      "fontSize": 16,
                    }
                  }
                  uppercase={false}
                >
                  I am 12 years old or younger
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-end",
                    "alignSelf": "center",
                    "flex": 0.28,
                    "paddingBottom": null,
                    "paddingLeft": null,
                    "paddingRight": null,
                    "paddingTop": null,
                  }
                }
              >
                <View
                  accessible={true}
                  isTVSelectable={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignSelf": null,
                      "opacity": 1,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
        <View>
          <View>
            <Text
              style={
                Object {
                  "color": "#4f6a92",
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "lineHeight": 32,
                  "marginBottom": 14,
                  "marginTop": 17,
                  "textAlign": "center",
                }
              }
            >
              Acknowledge terms of use.
            </Text>
          </View>
          <View
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <RCTSwitch
                onChange={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onTintColor="#627cff"
                style={
                  Object {
                    "height": 31,
                    "width": 51,
                  }
                }
                value={false}
              />
              <Text
                style={
                  Object {
                    "color": "#4f6a92",
                    "fontSize": 16,
                    "marginLeft": 10,
                  }
                }
              >
                I am 18 or older and accept the terms of the Tidepool App Terms of Use and Privacy Policy
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "flex-end",
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#627cff",
                "borderBottomWidth": null,
                "borderColor": "#627cff",
                "borderLeftWidth": null,
                "borderRadius": 5,
                "borderRightWidth": null,
                "borderTopWidth": null,
                "borderWidth": undefined,
                "elevation": 2,
                "flexDirection": "row",
                "height": 45,
                "justifyContent": "center",
                "opacity": 1,
                "paddingBottom": 6,
                "paddingTop": 6,
                "shadowColor": undefined,
                "shadowOffset": undefined,
                "shadowOpacity": undefined,
                "shadowRadius": undefined,
              }
            }
          >
            <Text
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#fff",
                  "fontFamily": "System",
                  "fontSize": 16.5,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                }
              }
              uppercase={false}
            >
              Continue
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</RCTSafeAreaView>
`;
